# bzlmodRio-libssh

./: .bazelrc-buildbuddy  .bazelrc-cc  MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl
.github/workflows/: auto_update.yml  build.yml  lint.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  auto_update.py  generate.py  get_libssh_dependencies.py  get_version.py  publish.py
libraries/cpp/libssh/: BUILD.bazel
private/cpp/libssh/: BUILD.bazel  static.BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelrc  .bazelrc-buildbuddy  .bazelrc-cc  MODULE.bazel  WORKSPACE
tests/cpp/libssh/: BUILD.bazel  main.cpp  test.cpp
