module(
    name = "bzlmodrio-libssh",
    version = "0.95-7",
    compatibility_level = 2023,
)

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_java", version = "6.0.0")
bazel_dep(name = "rules_bazelrio", version = "0.0.11")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2023-7")

setup_bzlmodrio_libssh_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_libssh_cpp_dependencies")
use_repo(
    setup_bzlmodrio_libssh_cpp_dependencies,
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_headers",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxarm32static",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxarm64static",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxx86-64static",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_osxuniversalstatic",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_sources",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_windowsx86-64static",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_windowsx86static",
    "bazelrio_edu_wpi_first_thirdparty_frc_libssh_windowsx86staticdebug",
)

setup_bzlmodrio_libssh_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_libssh_java_dependencies")
use_repo(
    setup_bzlmodrio_libssh_java_dependencies,
)
