alias(
    name = "libssh",
    actual = ":static",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
    ] + [
        "@bzlmodrio-libssh//private/cpp/libssh:static",
    ],
)
