cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-libssh//:__subpackages__"],
    deps = ["@bazelrio_edu_wpi_first_thirdparty_frc_libssh_headers//:headers"] + select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_thirdparty_frc_libssh_linuxx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_edu_wpi_first_thirdparty_frc_libssh_osxx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_edu_wpi_first_thirdparty_frc_libssh_windowsx86-64static//:static_libs"],
    }),
)
