load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_wpi_styleguide//styleguide:cc_styleguide.bzl", "cc_styleguide")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    tags = ["no-sandbox"],
    deps = ["@bzlmodrio-libssh//libraries/cpp/libssh"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-libssh//libraries/cpp/libssh",
        "@googletest//:gtest_main",
    ],
)

cc_styleguide(name = "libssh")
